--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.4",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "@types/luxon": "^1.26.4",
+    "aws-amplify": "^3.3.27",
+    "aws-amplify-react-native": "^4.3.2",
     "expo": "~41.0.1",
     "expo-asset": "~8.3.1",
     "expo-constants": "~10.1.3",
@@ -26,6 +30,7 @@
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.1.0",
+    "graphql": "^14.0.0",
     "luxon": "^1.26.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
