Upload IMage & display image

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -23,5 +23,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "TwitterClone": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
