--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "expo-constants": "~10.1.3",
     "expo-font": "~9.1.0",
     "expo-image-picker": "^10.2.2",
+    "expo-linear-gradient": "^9.2.0",
     "expo-linking": "~2.2.3",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.1.0",
     "graphql": "^14.0.0",
-    "luxon": "^1.26.0",
+    "luxon": "^2.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
