--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "@types/luxon": "^1.26.4",
+    "@types/uuid": "^8.3.1",
     "aws-amplify": "^4.1.0",
     "aws-amplify-react-native": "^5.0.2",
     "expo": "~41.0.1",
