AWS Amplify init + command for import csv & json data to dynamodb

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,10 +1,33 @@
 {
   "auth": {
-    "twittercloneb55c1114": {
+    "twitterclone92f6727f": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
-      "customAuth": false
+      "customAuth": false,
+      "frontendAuthConfig": {
+        "socialProviders": [
+          "FACEBOOK",
+          "GOOGLE"
+        ],
+        "usernameAttributes": [
+          "EMAIL"
+        ],
+        "signupAttributes": [
+          "EMAIL"
+        ],
+        "passwordProtectionSettings": {
+          "passwordPolicyMinLength": 8,
+          "passwordPolicyCharacters": []
+        },
+        "mfaConfiguration": "OFF",
+        "mfaTypes": [
+          "SMS"
+        ],
+        "verificationMechanisms": [
+          "EMAIL"
+        ]
+      }
     }
   },
   "api": {
@@ -16,18 +39,21 @@
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authtwittercloneb55c1114"
+              "userPoolId": "authtwitterclone92f6727f"
             }
           },
-          "additionalAuthenticationProviders": []
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "API_KEY",
+              "apiKeyConfig": {
+                "apiKeyExpirationDays": 7,
+                "apiKeyExpirationDate": "2022-01-16T15:22:03.111Z",
+                "description": "API Key for Amplify API"
+              }
+            }
+          ]
         }
       }
-    }
-  },
-  "storage": {
-    "TwitterClone": {
-      "service": "S3",
-      "providerPlugin": "awscloudformation"
     }
   }
 }
