--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,16 @@ web-build/
 # macOS
 .DS_Store
 
-#amplify
+# Custom
+.idea
+yarn-error.log
+
+#amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
 amplify/mock-data
 amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
 amplify/backend/.temp
 build/
 dist/
@@ -26,11 +29,10 @@ node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
+amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
-
-# Custom
-.idea
-yarn-error.log
+**.sample
+#amplify-do-not-edit-end
