--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/uuid": "^8.3.1",
     "aws-amplify": "^4.1.0",
     "aws-amplify-react-native": "^5.0.2",
+    "aws-appsync": "^4.1.4",
     "expo": "~41.0.1",
     "expo-asset": "~8.3.1",
     "expo-constants": "~10.1.3",
@@ -51,9 +52,11 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.46.0",
     "@babel/core": "^7.13.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "csv-parser": "^3.0.0",
     "jest-expo": "^41.0.0",
     "typescript": "~4.0.0"
   },
