--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -47,13 +47,20 @@
               "authenticationType": "API_KEY",
               "apiKeyConfig": {
                 "apiKeyExpirationDays": 7,
-                "apiKeyExpirationDate": "2022-01-16T15:22:03.111Z",
-                "description": "API Key for Amplify API"
+                "apiKeyExpirationDate": "2022-01-22T22:16:29.449Z",
+                "description": ""
               }
             }
           ]
         }
       }
+    }
+  },
+  "storage": {
+    "twitterClone": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
     }
   }
 }
